Modify overflow issue

--- a/static/css/category_list.css
+++ b/static/css/category_list.css
@@ -5,7 +5,7 @@
 
 .items {
   width: 100%;
-  background: #fffffe;
+  background: #ffffff;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.16), 0 2px 2px rgba(0, 0, 0, 0.23);
   border-top: 10px solid #c0deff;
   margin-bottom: 20px;
