--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,3 +69,17 @@ nav a {
     font-weight: bold;
     font-size: 24px;
 }
+
+.board-content {
+    line-height: 26px;
+}
+
+.board-content:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    bottom: 0;
+    background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 60%, rgb(255, 255, 255) 100%);
+}
